[tool.poetry]
name = "llm-counting"
version = "0.1.0"
description = ""
authors = ["jaymody <jaykmody@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_counting"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
